--- a/Movie_Reviews_Classification.ipynb
+++ b/Movie_Reviews_Classification.ipynb
@@ -11,14 +11,16 @@
   {
    "cell_type": "markdown",
    "id": "3a9885f2-cad8-4d94-9635-dc2acc0a9f1c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "4171b8e5-21a6-4af6-b1b2-c313d0a8d6b9",
    "metadata": {},
    "outputs": [],
@@ -35,14 +37,16 @@
   {
    "cell_type": "markdown",
    "id": "8305f1c0-1711-4e44-936c-592fdb8c18ed",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Importing and analysing data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "b4f2e5d2-a0dd-4f9c-832a-864614a358c3",
    "metadata": {},
    "outputs": [
@@ -117,7 +121,7 @@
        "4  petter mattei's \"love in the time of money\" is...  positive"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,9 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f699fc6c-05ce-464d-a60b-f79a5a6c8e1a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -151,13 +157,267 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data['sentiment'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ec16d79-37a7-400d-8e39-98938aca94f8",
+   "metadata": {},
+   "source": [
+    "# Splitting data into training and testing data sets\n",
+    "The training set will consist of 2 thirds of the original data set with an even number of positive and negative reviews.\n",
+    "\n",
+    "The testing set will consist of a third of the original data set, we won't make it balanced, we'll take one random third of the last rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "55b15af8-bc9f-4ff7-a737-889a4234e547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_set = data.loc[data['sentiment'] == 'positive']\n",
+    "training_set = positive_set.iloc[:17500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "21badd36-2fa8-43f5-9ad6-7b7ee7b15f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "negative_set = data.loc[data['sentiment'] == 'negative']\n",
+    "training_set = pd.concat([training_set, negative_set.iloc[:17500]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "261f9c37-0bba-4270-9a53-cd8cd5918275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del positive_set, negative_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "76c3899d-73bd-486c-b3f7-dd30176a374b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sentiment\n",
+       "positive    7510\n",
+       "negative    7490\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testing_set = data.iloc[35000:]\n",
+    "testing_set['sentiment'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e26d5543-0931-403b-936b-82c849327790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Shuffling the data sets to remove bias\n",
+    "training_set = training_set.sample(frac=1).reset_index(drop=True)\n",
+    "testing_set = testing_set.sample(frac=1).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7540a23d-1a96-4569-8845-731406ccb5c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35000, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>oz is by far the best show ever to grace telev...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>this is definitely one of the best kung fu mov...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>like others, i have seen and studied most of t...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>two things are changed from then.first of all ...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tom &amp; jerry are visiting africa and disguise t...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review sentiment\n",
+       "0  oz is by far the best show ever to grace telev...  positive\n",
+       "1  this is definitely one of the best kung fu mov...  negative\n",
+       "2  like others, i have seen and studied most of t...  positive\n",
+       "3  two things are changed from then.first of all ...  negative\n",
+       "4  tom & jerry are visiting africa and disguise t...  negative"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(training_set.shape)\n",
+    "training_set.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "623cd9b3-4252-4755-9699-32af66751e4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15000, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>it's all there: two classic anti-hero buddies,...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\"love and human remains\" is one of those obvio...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>what can i say? curse of monkey island is fant...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>lost is an extremely well made tv series about...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>\"when a small bavarian village is beset with a...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review sentiment\n",
+       "0  it's all there: two classic anti-hero buddies,...  positive\n",
+       "1  \"love and human remains\" is one of those obvio...  negative\n",
+       "2  what can i say? curse of monkey island is fant...  positive\n",
+       "3  lost is an extremely well made tv series about...  positive\n",
+       "4  \"when a small bavarian village is beset with a...  negative"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(testing_set.shape)\n",
+    "testing_set.head()"
    ]
   },
   {
