normalize data pipeline done

--- a/Movie_Reviews_Classification.ipynb
+++ b/Movie_Reviews_Classification.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "markdown",
    "id": "3a9885f2-cad8-4d94-9635-dc2acc0a9f1c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Library"
    ]
@@ -27,9 +25,14 @@
    "source": [
     "import pandas as pd\n",
     "import nltk\n",
-    "\n",
-    "\n",
     "nltk.download('stopwords')\n",
+    "\n",
+    "# Normalize text\n",
+    "import re\n",
+    "from bs4 import BeautifulSoup\n",
+    "from nltk.tokenize.toktok import ToktokTokenizer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
     "from IPython.display import clear_output\n",
     "clear_output(wait=False)"
    ]
@@ -169,7 +172,9 @@
   {
    "cell_type": "markdown",
    "id": "8ec16d79-37a7-400d-8e39-98938aca94f8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Splitting data into training and testing data sets\n",
     "The training set will consist of 2 thirds of the original data set with an even number of positive and negative reviews.\n",
@@ -179,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "55b15af8-bc9f-4ff7-a737-889a4234e547",
    "metadata": {},
    "outputs": [],
@@ -190,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "21badd36-2fa8-43f5-9ad6-7b7ee7b15f1c",
    "metadata": {},
    "outputs": [],
@@ -201,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "261f9c37-0bba-4270-9a53-cd8cd5918275",
    "metadata": {},
    "outputs": [],
@@ -211,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "76c3899d-73bd-486c-b3f7-dd30176a374b",
    "metadata": {},
    "outputs": [
@@ -224,7 +229,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "e26d5543-0931-403b-936b-82c849327790",
    "metadata": {},
    "outputs": [],
@@ -248,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "7540a23d-1a96-4569-8845-731406ccb5c4",
    "metadata": {},
    "outputs": [
@@ -287,28 +292,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>oz is by far the best show ever to grace telev...</td>\n",
+       "      <td>one of the best! as being a fan of the civil w...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>this is definitely one of the best kung fu mov...</td>\n",
+       "      <td>having decided some time ago to collect the fi...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>like others, i have seen and studied most of t...</td>\n",
+       "      <td>true love, i truly enjoyed and loved this movi...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>two things are changed from then.first of all ...</td>\n",
-       "      <td>negative</td>\n",
+       "      <td>the story is about ankush (abhay deol) - who i...</td>\n",
+       "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>tom &amp; jerry are visiting africa and disguise t...</td>\n",
-       "      <td>negative</td>\n",
+       "      <td>i have not seen it since 1998 and yet i still ...</td>\n",
+       "      <td>positive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -316,14 +321,14 @@
       ],
       "text/plain": [
        "                                              review sentiment\n",
-       "0  oz is by far the best show ever to grace telev...  positive\n",
-       "1  this is definitely one of the best kung fu mov...  negative\n",
-       "2  like others, i have seen and studied most of t...  positive\n",
-       "3  two things are changed from then.first of all ...  negative\n",
-       "4  tom & jerry are visiting africa and disguise t...  negative"
+       "0  one of the best! as being a fan of the civil w...  positive\n",
+       "1  having decided some time ago to collect the fi...  negative\n",
+       "2  true love, i truly enjoyed and loved this movi...  positive\n",
+       "3  the story is about ankush (abhay deol) - who i...  positive\n",
+       "4  i have not seen it since 1998 and yet i still ...  positive"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "623cd9b3-4252-4755-9699-32af66751e4c",
    "metadata": {},
    "outputs": [
@@ -374,27 +379,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>it's all there: two classic anti-hero buddies,...</td>\n",
-       "      <td>positive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>\"love and human remains\" is one of those obvio...</td>\n",
+       "      <td>in its depiction of a miserable milanese under...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>arnold once again in the 80's demonstrated tha...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>what can i say? curse of monkey island is fant...</td>\n",
+       "      <td>i never fail to be amazed and horrified by the...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>lost is an extremely well made tv series about...</td>\n",
+       "      <td>this movie was beautiful and touching. it touc...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>\"when a small bavarian village is beset with a...</td>\n",
+       "      <td>bette davis brings her full trunk of tics to t...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -403,14 +408,14 @@
       ],
       "text/plain": [
        "                                              review sentiment\n",
-       "0  it's all there: two classic anti-hero buddies,...  positive\n",
-       "1  \"love and human remains\" is one of those obvio...  negative\n",
-       "2  what can i say? curse of monkey island is fant...  positive\n",
-       "3  lost is an extremely well made tv series about...  positive\n",
-       "4  \"when a small bavarian village is beset with a...  negative"
+       "0  in its depiction of a miserable milanese under...  negative\n",
+       "1  arnold once again in the 80's demonstrated tha...  positive\n",
+       "2  i never fail to be amazed and horrified by the...  positive\n",
+       "3  this movie was beautiful and touching. it touc...  positive\n",
+       "4  bette davis brings her full trunk of tics to t...  negative"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,60 +442,312 @@
     "\n",
     "The steps will be :\n",
     "\n",
-    "- Putting all the text in lower case\n",
-    "- Removing punctuation and html specific keyword (such as < br/ >)\n",
+    "- Putting all the text in lower case (With the converters parameter of read_csv, we already did this step.)\n",
+    "- Removing punctuation and html specific keyword (such as < br/ >) : we'll use re and BeautifulSoup.\n",
     "- Transforming the text into tokens\n",
-    "- Removing any stopword\n",
-    "- Using a lemmatizer on the text\n",
-    "\n",
-    "With the converters parameter of read_csv, we already turned the text into lowercase."
+    "- Removing any stopword : it consists of removing words with poor semantic interest, nltk has a built in list to which I'll add the words \"movie\" and \"review\".\n",
+    "- Using a lemmatizer on the text : it consists of using the same word for derivatives of said word, removing conjugation from verbs, plural from words etc.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
+   "id": "329d2a57-35fe-4cf2-80e4-51a200810a88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We'll use a simple, general tokeniser\n",
+    "toktoktokeniser = ToktokTokenizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "2a761521-315a-4965-bdd3-2c376400335f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stopwords = nltk.corpus.stopwords.words('english')"
+    "stopwords = nltk.corpus.stopwords.words('english')\n",
+    "stopwords.append(\"movie\")\n",
+    "stopwords.append(\"review\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2d5b9a07-98ea-494b-93f8-aa1de8e2d410",
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalize_text(text):\n",
     "    # lower case -> done in read_csv\n",
+    "    # removing html specific keywords\n",
+    "    soup = BeautifulSoup(text, \"html.parser\")\n",
+    "    text = soup.get_text()\n",
+    "    \n",
     "    # removing all punctuation\n",
     "    text = re.sub(r'[^\\w\\s]', '', text)\n",
     "    \n",
-    "    # removing html specific keywords\n",
-    "    #todo\n",
-    "    \n",
     "    # transforming txt into tokens\n",
-    "    tokens = tokenizer.tokenize(text)\n",
+    "    tokens = toktoktokeniser.tokenize(text)\n",
     "    # removing stopwords\n",
-    "    stop=set(stopwords.words('english'))\n",
     "    tokens_to_filter = [token.strip() for token in tokens]\n",
     "    tokens = [token for token in tokens_to_filter if token not in stopwords]\n",
+    "    \n",
     "    # using a lemmatizer on the text\n",
     "    lemma = WordNetLemmatizer()\n",
-    "    [lemma.lemmatize(word] for word in tokens]\n",
-    "    return tokens"
+    "    final_tokens = [lemma.lemmatize(word) for word in tokens]\n",
+    "    text = ' '.join(final_tokens)\n",
+    "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "360b11e2-dbd3-4d22-bd68-3bfdeb53b76c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>one best fan civil war pleased first installme...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>decided time ago collect film billy bob thornt...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>true love truly enjoyed loved fun funny inspir...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>story ankush abhay deol professional marriage ...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>seen since 1998 yet still cant get head stop r...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34995</th>\n",
+       "      <td>despite one john cusack demi moore early film ...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34996</th>\n",
+       "      <td>costly film produced sir alexander korda hg we...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34997</th>\n",
+       "      <td>probably blame sure hell expected go title bla...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34998</th>\n",
+       "      <td>first series brilliant easily one best horror ...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34999</th>\n",
+       "      <td>certainly highlight film castdiana rigg george...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>35000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  review sentiment\n",
+       "0      one best fan civil war pleased first installme...  positive\n",
+       "1      decided time ago collect film billy bob thornt...  negative\n",
+       "2      true love truly enjoyed loved fun funny inspir...  positive\n",
+       "3      story ankush abhay deol professional marriage ...  positive\n",
+       "4      seen since 1998 yet still cant get head stop r...  positive\n",
+       "...                                                  ...       ...\n",
+       "34995  despite one john cusack demi moore early film ...  negative\n",
+       "34996  costly film produced sir alexander korda hg we...  positive\n",
+       "34997  probably blame sure hell expected go title bla...  negative\n",
+       "34998  first series brilliant easily one best horror ...  negative\n",
+       "34999  certainly highlight film castdiana rigg george...  positive\n",
+       "\n",
+       "[35000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data['review'] = data['review'].apply(normalize_text)"
+    "training_set['review'] = training_set['review'].apply(normalize_text)\n",
+    "clear_output(wait=False)\n",
+    "training_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fc754071-5bb1-4312-9660-2f73fb496ba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>depiction miserable milanese underclass film p...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>arnold 80 demonstrated king action one liner f...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>never fail amazed horrified evil predicated hi...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>beautiful touching touched place deep inside i...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>bette davis brings full trunk tic miserable fl...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14995</th>\n",
+       "      <td>wish film middle aged people intellectual jour...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14996</th>\n",
+       "      <td>halloween film get watch every time day yeari ...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14997</th>\n",
+       "      <td>robert heinlein classic novel starship trooper...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14998</th>\n",
+       "      <td>return cabin lake way stand original one main ...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14999</th>\n",
+       "      <td>program brief period kid remember watching whi...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  review sentiment\n",
+       "0      depiction miserable milanese underclass film p...  negative\n",
+       "1      arnold 80 demonstrated king action one liner f...  positive\n",
+       "2      never fail amazed horrified evil predicated hi...  positive\n",
+       "3      beautiful touching touched place deep inside i...  positive\n",
+       "4      bette davis brings full trunk tic miserable fl...  negative\n",
+       "...                                                  ...       ...\n",
+       "14995  wish film middle aged people intellectual jour...  positive\n",
+       "14996  halloween film get watch every time day yeari ...  positive\n",
+       "14997  robert heinlein classic novel starship trooper...  positive\n",
+       "14998  return cabin lake way stand original one main ...  negative\n",
+       "14999  program brief period kid remember watching whi...  positive\n",
+       "\n",
+       "[15000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testing_set['review'] = testing_set['review'].apply(normalize_text)\n",
+    "clear_output(wait=False)\n",
+    "testing_set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a55379b-f5a9-4fe7-a4a7-c3d16aac17ee",
+   "metadata": {},
+   "source": [
+    "# "
    ]
   }
  ],
