add summary, intro, conclusion to nb + update readme

--- a/Movie_Reviews_Classification.ipynb
+++ b/Movie_Reviews_Classification.ipynb
@@ -5,7 +5,22 @@
    "id": "8964a1ec-a31a-4182-b206-8cac632aa452",
    "metadata": {},
    "source": [
-    "# Movie Reviews Classification"
+    "# Movie Reviews Classification\n",
+    "In this notebook, we'll try and predict the sentiment of movie reviews. \n",
+    "\n",
+    "Using an SGD model, we will determine whether a movie review is positive or negative."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a77cc923-8517-4d01-87af-1f2f12cf9ae9",
+   "metadata": {},
+   "source": [
+    "# Summary\n",
+    "- Data Analysis\n",
+    "- Normalizing data\n",
+    "- Term Frequency Inverse Document Frequency (TFIDF)\n",
+    "- Stochastic Gradient Descent model"
    ]
   },
   {
@@ -184,7 +199,9 @@
   {
    "cell_type": "markdown",
    "id": "8ec16d79-37a7-400d-8e39-98938aca94f8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Splitting data into training and testing data sets\n",
     "The training set will consist of 2 thirds of the original data set with an even number of positive and negative reviews.\n",
@@ -896,7 +913,9 @@
   {
    "cell_type": "markdown",
    "id": "245a968c-2bce-4ed5-a269-e2d57c6f4137",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Prediction results on testing set"
    ]
@@ -1016,6 +1035,22 @@
     "print('* False positives :', conf_matrix[0][1],'\\n')\n",
     "print('* False negatives:', conf_matrix[1][0] ,'\\n')\n",
     "print('* True negatives:', conf_matrix[1][1] ,'\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da8b4e1c-7b53-47c0-aa0c-6ba1bc1cc92f",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3270e00-738f-4df3-8777-01587bbec832",
+   "metadata": {},
+   "source": [
+    "In conclusion, our model performed very well at predicting whether a review was positive or negative."
    ]
   }
  ],
